# dilbert.py

./: .pylintrc  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
dilbert/: __init__.py  comic.py  endpoints.py  utils.py
docs/: conf.py  index.rst
